k8s-manifests/dgva-server/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dgva-server-prod
  labels:
    environment: production
