k8s-manifests/dgva-server/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgva-server
spec:
  replicas: 3  # 1 replica per node across the 3-node cluster, matching staging
  template:
    spec:
      containers:
      - name: dgva-server
        image: dockerhub.ebi.ac.uk/ebivariation/eva-ws
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
