k8s-manifests/dgva-server/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dgva-server
spec:
  rules:
  - host: www.ebi.ac.uk
    http:
      paths:
      - path: /dgva/webservices/rest
        pathType: Prefix
        backend:
          service:
            name: dgva-server
            port:
              number: 8080
